# rust-cli-coder

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: error.rs  lib.rs  server.rs
src/edit/: diff.rs  levenshtein.rs  mod.rs  replacers.rs
src/tools/: bash.rs  edit.rs  glob.rs  grep.rs  mod.rs  read.rs  write.rs
src/util/: atomic.rs  mod.rs
tests/: mcp_protocol_test.rs
