[package]
name = "oa-coder"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/Acosmi/open-coder"
description = "Programming sub-agent with 9-layer fuzzy edit, file tools, and sandboxed execution"

[[bin]]
name = "oa-coder"
path = "src/bin/oa-coder.rs"

[dependencies]
# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Serialization (MCP JSON-RPC 2.0)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP (for codesearch/websearch, future use)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false, optional = true }

# Atomic file writes (tempfile + rename)
tempfile = "3.14"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Diff algorithm (Patience/Myers for edit tool)
similar = "2.7"

# Glob matching (BurntSushi/ripgrep ecosystem)
globset = "0.4"

# Process detection (for rg binary lookup)
which = "7.0"

# Regex (for replacers)
regex = "1.11"

# OS-native sandbox runtime (optional)
oa-sandbox = { path = "../oa-sandbox", optional = true }

[features]
default = ["sandbox"]
sandbox = ["dep:oa-sandbox"]
http = ["dep:reqwest"]

[dev-dependencies]
tokio = { version = "1.49", features = ["full", "test-util"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "warn"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
